added more analytics